# xdb

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
include/libxdb/: bits.hpp  breakpoint_site.hpp  error.hpp  libxdb.hpp  parse.hpp  pipe.hpp  process.hpp  register_info.hpp  registers.hpp  stoppoint_manager.hpp  types.hpp
include/libxdb/detail/: registers.inc
src/: CMakeLists.txt  breakpoint_site.cpp  libxdb.cpp  pipe.cpp  process.cpp  registers.cpp
test/: CMakeLists.txt  test.sh  tests.cpp  xdb.cpp
test/targets/: CMakeLists.txt  reg_read.s  reg_write.s
tools/: CMakeLists.txt  demo.cpp  xdb.cpp
